--- a/chef/package.json
+++ b/chef/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "formik": "^1.5.8",
+    "hoist-non-react-statics": "^3.3.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "styled-components": "^4.4.0"
   },
