--- a/chef-app/package.json
+++ b/chef-app/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
     "formik": "^1.5.8",
     "hoist-non-react-statics": "^3.3.0",
     "react": "^16.10.2",
@@ -10,6 +11,7 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "styled-components": "^4.4.0",
     "yup": "^0.27.0"
   },
   "scripts": {
